Separate Titan and Minecraft endpoints Created service authentication method in jwtAuth, currently incomplete Endpoints for Titan and Minecraft are now in separate routers /minecraft/packs - resource pack main endpoint /minecraft/packs/list - get all configured packs /minecraft/packs/get - get specific pack info
